# cuda-demo

./: README.md  cuda_header.h  device_info  device_info.cu
elementwise/: CMakeLists.txt  README.md  elementwise.cu  elementwise.cuh  test.cu
mat_transpose/: CMakeLists.txt  README.md  mat_transpose_cpu.cu  mat_transpose_cpu.cuh  test.cu
reduce/: CMakeLists.txt  README.md  softmax.cuh  sum.cu  sum.cuh  test.cu
